Upgraded commons lang library Removed the older or 2x library from the dependency tree.